--- a/src/app/shared/poke-list/poke-list.component.scss
+++ b/src/app/shared/poke-list/poke-list.component.scss
@@ -1,62 +1,67 @@
 @import'../../../config-scss/rem.calc.scss';
 
+:host{ 
+    .listagem{
+        display: flex;
+        justify-content: space-between;
+        padding: 10% 0;
+        flex-wrap: wrap;
 
-:host{
-    display: flex;
-    justify-content: space-between;
-    padding: 10% 0;
-    flex-wrap: wrap;
- .pokemon{
-    position: relative;
-    display: flex;
-    width: calc(49% - 2.5rem);
-    background-color: var(--branco);
-    padding: rem-calc(20);
-    border-radius: rem-calc(10);
-    height: rem-calc(157-40);
-    margin-bottom: rem-calc(10);
+        .pokemon{
+        position: relative;
+        display: flex;
+        width: calc(49% - 2.5rem);
+        background-color: var(--branco);
+        padding: rem-calc(20);
+        border-radius: rem-calc(10);
+        height: rem-calc(157-40);
+        margin-bottom: rem-calc(10);
 
-    &__status{
-        h2{
-            font-size:rem-calc(22);
-            text-transform: capitalize;
-            font-style: italic ;
-            font-weight: 700;
-            margin-bottom: rem-calc(10);
-        }
-        ul{
-            display: flex;
-            flex-direction: column;
-        }
-            li{
-                background: var(--cinza);
-                font-size:rem-calc(10);
+        text-decoration: none;
+        color: var(--primary--color);
+
+        &__status{
+            h2{
+                font-size:rem-calc(22);
+                text-transform: capitalize;
+                font-style: italic ;
+                font-weight: 700;
+                margin-bottom: rem-calc(10);
+            }
+            ul{
                 display: flex;
-                justify-content: center;
+                flex-direction: column;
+            }
+                li{
+                    background: var(--cinza);
+                    font-size:rem-calc(10);
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;
+                    border-radius: rem-calc(50);
+                    width: rem-calc(60);
+
+                    margin-bottom: rem-calc(5);
+
+                }
+            }
+            &__image{
+                position: absolute;
+                display: flex;
                 align-items: center;
-                border-radius: rem-calc(50);
-                width: rem-calc(60);
-
-                margin-bottom: rem-calc(5);
-
-            }
-        }
-        &__image{
-            position: absolute;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            height: rem-calc(90);
-            width: rem-calc(110);
-            bottom:rem-calc(20);
-            right: rem-calc(20);
-            background: url('../../../assets/pokemon.png/001.png') no repeat;
-                
-            img{
-                width: rem-calc(100);
+                justify-content: center;
+                height: rem-calc(90);
+                width: rem-calc(110);
+                bottom:rem-calc(20);
+                right: rem-calc(20);
+                background: url('../../../assets/pokemon.png/001.png') no repeat;
                     
-            }
-            }
-         }    
-    }
+                img{
+                    width: rem-calc(75);
+                        
+                }
+                }
+            }    
+        }
+}
  
