--- a/src/app/pages/details/details.component.html
+++ b/src/app/pages/details/details.component.html
@@ -1,29 +1,36 @@
 <poke-header></poke-header>
 <main>
-    <section class="pokemon__names">
-        <h1>{{pokemon[0].name}}</h1>
-        <h2>{{pokemon[1].names[0].name}}</h2>
-    </section>
-    <section class="pokemon__status">
-        <img [src]="pokemon[0].sprites.other.dream_world.front_default" [alt]="pokemon[0].name">
-        
-    </section>
-    <article class="pokemon__status__statistics">
-        <section>
-            <h3>Estatísticas</h3>
+    <ng-template [ngIf]="isLoading">
 
-            <ol>
-                <li *ngFor="let value of pokemon[0].stats">
-                    {{value.stat.name}}
-
-                <strong>
-                    {{value.base_stat}}
-                </strong>
-                </li>
-            </ol>
+        <section class="pokemon__names">
+            <h2 class="slideInLeft">{{pokemon[1].names[0].name}} </h2>
+            <h1 class="slideInRight">{{pokemon[0].name}}</h1>
         </section>
-        <a [routerLink]="['']" class="btn btn__secondary">
-            voltar 
-        </a>
-    </article>
+        <section class="pokemon__status">
+            <img [src]="pokemon[0].sprites.other.dream_world.front_default" [alt]="pokemon[0].name" class="slideInDown">
+
+        </section>
+        <article class="pokemon__status__statistics">
+            <section>
+                <h3>Estatísticas</h3>
+
+                <ol>
+                    <li *ngFor="let value of pokemon[0].stats">
+                        {{value.stat.name}}
+
+                        <strong>
+                            {{value.base_stat}}
+                        </strong>
+                    </li>
+                </ol>
+            </section>
+            <a [routerLink]="['']" class="btn btn__secondary">
+                voltar
+            </a>
+        </article>
+    </ng-template>
+    <img 
+    src="assets/Group4.png" alt="erro"
+    width="100%"
+    *ngIf="apiError">
 </main>
