--- a/src/app/shared/poke-list/poke-list.component.html
+++ b/src/app/shared/poke-list/poke-list.component.html
@@ -1,22 +1,21 @@
 <poke-search (emmitSearch)="getSearch($event)"> </poke-search>
-<section class="listagem">        
+<section class="listagem">
     <ng-template ngFor let-pokemon [ngForOf]="getAllPokemons">
-        <a [routerLink]="['details', pokemon.status.id]"  class="pokemon" *ngIf="pokemon.status">
-            <section class="pokemon__status"> 
+        <a [routerLink]="['details', pokemon.status.id]" class="pokemon" *ngIf="pokemon.status">
+            <section class="pokemon__status">
                 <h2>
-                 {{pokemon.name}}
+                    {{pokemon.name}}
                 </h2>
-                   <ul >
-                     <li *ngFor="let value of pokemon.status.types">
-                            {{value.type.name}}   
-                     </li>
-                    </ul>
+                <ul>
+                    <li *ngFor="let value of pokemon.status.types">
+                        {{value.type.name}}
+                    </li>
+                </ul>
             </section>
-                <section class="pokemon__image">
-                    <img 
-                    [src]="pokemon.status.sprites.other.dream_world.front_default" 
-                    [alt]="pokemon.name">
-                </section> 
+            <section class="pokemon__image">
+                <img [src]="pokemon.status.sprites.other.dream_world.front_default" [alt]="pokemon.name">
+            </section>
         </a>
-     </ng-template>
+    </ng-template>
 </section>
+<img src="assets/Group4.png" alt="erro" width="100%" *ngIf="apiError">
